fix colors / app name

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abasteça+</title>
+    <title>abasteci</title>
     <meta name="description" content="Os melohores preços de combustíveis" />
-    <meta name="author" content="Abasteça+" />
+    <meta name="author" content="abasteci" />
     <meta property="og:image" content="/og-image.svg" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#34D399" />
