--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>abasteci</title>
-    <meta name="description" content="Os melohores preços de combustíveis" />
+    <meta name="description" content="Comparador de preço de combustíveis com cashback" />
     <meta name="author" content="abasteci" />
     <meta property="og:image" content="/og-image.svg" />
     <link rel="manifest" href="/manifest.json" />
